--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> 
-        <h1>Vai ser uma imagem aqui</h1>
-        <ul>
-            <li>Colégio Estadual</li>
-            <li>Helena Viana Sundin</li>
+    <header class="cabeçalho"> 
+        <img class="cabeçalho-imagem" src="logo ccm.png" alt="logo do cólegio civico militar">
+        <ul class="cabeçalho-lista">
+            <li class="cabeçalho-lista-item">Colégio Estadual</li>
+            <li class="cabeçalho-lista-item">Helena Viana Sundin</li>
         </ul>
     </header>
    
